examples/pos/bidirectional/higherorder.effekt
interface Choose {
  def choose() {f: () => Unit }  {g: () => Unit }: Unit
}


def f() = try {
    do choose() { println("hello") } { println("world") };
    println("after call")
    42
} with Choose {
  def choose() = {
    resume { {f: () => Unit } {g: () => Unit } =>
      println("first")
      f()
      println("second")
      g()
    }
    println("after resume")
    1
  }
}

def main() = {
    println(f())
}