examples/neg/issue369-handler.effekt
interface Eff {
  def op(): Int
}

def main() =
  try {
    println(do op() + do op())
  } with Eff {
    def op() = println("42"); 42 // ERROR Unexpected tokens after operation definition
  }
